--- a/index.html
+++ b/index.html
@@ -3,72 +3,69 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VGames - Tic Tac Toe</title>
+  <title>VCLOUD24 - VGAMES</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="assets/vastro.ico" type="image/x-icon">
 </head>
 <body>
-  <!-- Loading Screen -->
-  <div id="loadingScreen" class="screen">
-    <img src="assets/logo.png" alt="VGames Logo" class="logo">
-    <h1>VGames</h1>
-    <p>Loading...</p>
+  <!-- Landing Page -->
+  <div id="landingPage" class="page">
+    <h1>VCLOUD24</h1>
+    <p>VGAMES</p>
+    <button id="enterButton">Enter</button>
   </div>
 
-  <!-- Login Section -->
-  <div id="loginScreen" class="screen hidden">
-    <img src="assets/logo.png" alt="VGames Logo" class="logo">
+  <!-- Login Page -->
+  <div id="loginPage" class="page hidden">
+    <h2>Login</h2>
     <form id="loginForm">
       <input type="text" id="username" placeholder="Username" required>
       <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
-    <button id="guestLogin">Login as Guest</button>
-    <p>Don't have an account? <a href="https://vcloud24.github.io/account" target="_blank">Create one</a></p>
-    <p>Having trouble? <a href="https://vcloud24.github.io/trouble" target="_blank">Get help</a></p>
+    <button id="guestMode">Guest Mode</button>
+    <p id="errorMessage"></p>
   </div>
 
-  <!-- Game Section -->
-  <div id="gameScreen" class="screen hidden">
-    <header>
-      <img src="assets/logo.png" alt="VGames Logo" class="logo">
-      <span id="usernameDisplay"></span>
-    </header>
-    <main>
-      <div class="game-container">
-        <div class="board">
-          <!-- Tic Tac Toe Board (3x3 grid) -->
+  <!-- Game Page -->
+  <div id="gamePage" class="page hidden">
+    <h2>VCLOUD</h2>
+    <button id="playButton">Play</button>
+    <div id="gameBoard" class="hidden">
+      <div class="scoreboard">
+        <p>Time: <span id="time">00:00</span></p>
+        <p>Score: <span id="score">0</span></p>
+      </div>
+      <div class="board">
+        <!-- Tic Tac Toe Grid -->
+        <div class="row">
           <div class="cell" data-index="0"></div>
           <div class="cell" data-index="1"></div>
           <div class="cell" data-index="2"></div>
+        </div>
+        <div class="row">
           <div class="cell" data-index="3"></div>
           <div class="cell" data-index="4"></div>
           <div class="cell" data-index="5"></div>
+        </div>
+        <div class="row">
           <div class="cell" data-index="6"></div>
           <div class="cell" data-index="7"></div>
           <div class="cell" data-index="8"></div>
         </div>
-        <div class="scoreboard">
-          <h2>Scoreboard</h2>
-          <p>Player: <span id="playerScore">0</span></p>
-          <p>Bot: <span id="botScore">0</span></p>
-          <p>Time: <span id="timer">00:00</span></p>
-        </div>
       </div>
-    </main>
+    </div>
   </div>
 
-  <!-- Results Section -->
-  <div id="resultsScreen" class="screen hidden">
-    <img src="assets/logo.png" alt="VGames Logo" class="logo">
-    <h1>Game Over</h1>
-    <p id="resultsText"></p>
-    <button id="playAgain">Play Again</button>
-    <button id="shareScore">Share Encrypted Score</button>
-    <button id="premiumGames">Play Premium Games</button>
+  <!-- Ad Popup -->
+  <div id="adPopup" class="popup hidden">
+    <p>Play VCLOUD24, VGAMES1, and VUYANI1 at:</p>
+    <p><a href="https://vcloud24.github.io">vcloud24.github.io</a></p>
+    <button id="closeAd">Close</button>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
-  <script src="scripts.js"></script>
+  <script src="accounts.js"></script>
+  <script src="main.js"></script>
+  <script src="game.js"></script>
+  <script src="ads.js"></script>
 </body>
 </html>
